Adding conflicting changes on purpose for git example

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2018 MID:COM Corp
 -->
 <head>
-	<title>An Example Website</title>
+	<title>A Very Respectful Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			I am not sure what he put here
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Midwest Meter 2014</p>
 	</footer>
 </body>
 </html>
