mb before rebase conflits

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2018 MID:COM Corp
+	Adding changes before rebasing conflict
 -->
 <head>
 	<title>An Example Website</title>
