fb Adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Adding changes before rebasing conflict
 -->
 <head>
-	<title>An Examasdfsite</title>
+	<title>An Example Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,13 +16,11 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content asdf Here -->
 		<p>
-			I am not sure what he put here
+			I am notasdf sure what he put here
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; MIasdfOM 2018</p>
 	</footer>
 </body>
 </html>
