--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Adding changes before rebasing conflict
 -->
 <head>
-	<title>An Example Website</title>
+	<title>An Examasdfsite</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,13 +16,13 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Content asdf Here -->
 		<p>
 			I am not sure what he put here
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; MID:COM 2018</p>
+		<p>&copy; MIasdfOM 2018</p>
 	</footer>
 </body>
 </html>
