Adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -17,7 +17,7 @@
 <body>
 	<main class="container">
 		<p>
-			I am notasdf sure what he put here
+			I am not sure what he put here.
 		</p>
 	</main>
 	<footer class="container">
