local: updating simple.html

--- a/simple.html
+++ b/simple.html
@@ -17,7 +17,7 @@
 <body>
 	<main class="container">
 		<p>
-			I am not sure what he put here.
+			I am not sure what he put here. Adding something
 		</p>
 	</main>
 	<footer class="container">
