Done with simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Adding changes before rebasing conflict
 -->
 <head>
-	<title>An Example Website</title>
+	<title>An Outstanding Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 <body>
 	<main class="container">
 		<p>
-			I am not sure what he put here. Adding something
+			I am not sure what he put here. Adding something. and adding more
 		</p>
 	</main>
 	<footer class="container">
