Changes and git stash branch command

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Adding changes before rebasing conflict
 -->
 <head>
-	<title>An Outstanding Website</title>
+	<title>An Outstanding  new Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
